--- a/src/Makefile
+++ b/src/Makefile
@@ -1,3 +1,3 @@
 all:
-	g++ -g ./makeTrainingSamples.cc  -o makeTrainingSamples
-	g++ -g ./neural-net.cpp training_data.cc neuron.cc net.cc -o neural-net
+	g++ -std=c++11 -g ./makeTrainingSamples.cc  -o makeTrainingSamples
+	g++ -std=c++11 -g ./main.cc training_data.cc neuron.cc net.cc -o neural-net
